[gd_scene load_steps=7 format=3 uid="uid://6xw74f3dlge2"]

[ext_resource type="Script" path="res://enemies/bobot_controller.gd" id="1_51ts6"]
[ext_resource type="Script" path="res://enemies/enemy_health.gd" id="2_7rgg5"]
[ext_resource type="Script" path="res://Oliver/resource events/event_node.gd" id="3_nfivp"]
[ext_resource type="Texture2D" uid="uid://cx75i1ky3dk1w" path="res://enemies/bobot_sprites/standing.png" id="4_gcpoy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5x3xp"]
height = 6.0
radius = 3.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jxsfj"]
height = 6.0
radius = 1.50081

[node name="Bobot" type="CharacterBody3D" node_paths=PackedStringArray("agent", "death_event")]
script = ExtResource("1_51ts6")
speed = 3.0
agent = NodePath("NavigationAgent3D")
death_event = NodePath("Health/Death Event")

[node name="Health" type="Area3D" parent="." node_paths=PackedStringArray("death_event")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.01393, 0)
collision_mask = 7
script = ExtResource("2_7rgg5")
max_health = 3
death_event = NodePath("Death Event")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Health"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("CylinderShape3D_5x3xp")

[node name="Death Event" type="Node" parent="Health"]
script = ExtResource("3_nfivp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.01393, 0)
shape = SubResource("CylinderShape3D_jxsfj")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 4.0
target_desired_distance = 10.0
path_max_distance = 565.01
height = 6.0
radius = 2.0
avoidance_layers = 0
avoidance_mask = 0
debug_path_custom_color = Color(1, 0, 0, 1)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.40835, 0)
pixel_size = 0.07
billboard = 1
texture_filter = 0
texture = ExtResource("4_gcpoy")

[connection signal="body_entered" from="Health" to="Health" method="_on_body_entered"]
[connection signal="health_damaged" from="Health" to="." method="_on_health_damaged"]
